--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -24,6 +24,12 @@
   color: white;
 }
 
+.Appfooter {
+  border-style: none;
+  justify-content: center;
+  background-color:black;
+}
+
 .App-link {
   color: #61dafb;
 }
